infra/kubernetes/cluster-01/apps/default/homeassistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant-deployment
  namespace: default
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          securityContext:
            privileged: true
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - mountPath: /config/configuration.yaml
              name: homeassistant-config
      volumes:
        - name: homeassistant-config
          configMap:
            name: homeassistant
