infra/kubernetes/cluster-01/apps/default/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-svc
  namespace: default
spec:
  selector:
    app: homeassistant
  ports:
    - name: ha-web
      protocol: TCP
      port: 9502
      targetPort: web
